fix: book cover too large on mobile

--- a/assets/css/components/_library.scss
+++ b/assets/css/components/_library.scss
@@ -88,7 +88,8 @@
     }
 
     #book-page &, #post-content & {
-        margin: 0;
+        margin: 0 auto;
+        max-width: 50%;
         @media screen and (min-width: 768px) {
             display: inxwline-block;
             float: left;
@@ -96,4 +97,8 @@
             margin: 0 2rem 1.2rem 0;
         }
     }
+}
+
+#book-page {
+    margin: 1rem 0;
 }
